# cowlibration-field

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt  vcpkg.json
data/camera_models/: iphone_12_with_correction.json
scripts/: visualize.py
src/: main.cpp
